增加启动脚本和相关配置文件